--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -50,9 +50,9 @@
 
                 <input type="hidden" value="0" id="hdf_temp">
 
-                <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
+                <div class="col-md-12" style="padding-top: 0px; padding-left: 0px; padding-right: 0px;">
 
-                    <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+                    <div class="col-md-12" style="padding-top: 20px; padding-left: 0px; padding-right: 0px;">
 
                         <div class="row">
                             <div class="col-md-3">
@@ -136,7 +136,7 @@
 
                     </div>
 
-                    <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+                    <div class="col-md-12" style="padding-top: 20px; padding-left: 0px; padding-right: 0px;">
 
                         <div class="row">
 
@@ -146,7 +146,9 @@
 
                     </div>
 
-                    <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+                    @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
+                    <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
+
 
                     </div>
 
