changes in _Layout.cshtml, _Lookup.cshtml, Inventory Report(Search.cshtml), Salse Invoice Report(SalesReport.cshtml,  _SalesDetails.cshtml), Purchase Order(Search.cshtml, Index.cshtml, purchaseorder_methods.js), Purchase Return(Index.cshtml, purchasereturn_methods.js, purchasereturn_validation.js), Return Request ( Index.cshtml, purchasereturnrequest_methods.js), Purchase Order Request(Index.cshtml, purchaseorderrequest_methods.js), Purchase Invoice (Index.cshtml , purchaseInvoice_methods.js)

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/_SalesDetailsReport.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/_SalesDetailsReport.cshtml
@@ -4,7 +4,7 @@
     <script src="~/Scripts/Modules/SalesOrder/salesreport_search_methods.js"></script>*@
     <div class="block" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">       
         <div class="table-responsive">
-            <table class="table table-hover" style="margin-bottom: 0;">
+            <table class="table table-hover" style="height: 300px; overflow: auto; padding: 0;">
                 <thead>
                     <tr>
                         <th style="width: 15%;">SKU Code</th>
