--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesReport.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesReport.cshtml
@@ -33,7 +33,7 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 10px; padding-left: 10px; padding-right: 10px;">
 
             <div class="block">
 
@@ -43,57 +43,54 @@
 
                     <input type="hidden" class="form-control" name="Filter.Sales_Invoice_Id" id="hdnSalesInvoiceID" value="@Model.Filter.Sales_Invoice_Id">
 
-                    <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+                    <div class="row">
 
-                        <div class="row">
+                        <div class="col-md-3" id="divBranch">
 
-                            <div class="col-md-3" id="divBranch">
-
-                                <div class="form-group auto-complete">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control invoice-filter autocomplete-text" name="SalesInvoice.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" value="@Model.SalesInvoice.Branch_Name" data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branch">
-                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                        <input type="hidden" id="hdnBranchID" value="" name="Filter.Branch_Id" class="auto-complete-value" />
-                                        <input type="hidden" id="hdnBranchName" value="" name="" class="auto-complete-label" />
-                                    </div>
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="SalesInvoice.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" value="@Model.SalesInvoice.Branch_Name" data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branch">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnBranchID" value="" name="Filter.Branch_Id" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnBranchName" value="" name="" class="auto-complete-label" />
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="col-md-3">
-                                <div class="form-group">
+                        <div class="col-md-3">
+                            <div class="form-group">
 
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">From date</span>
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">From date</span>
 
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="yyyy-mm-dd">
-                                        <input type="text" class="form-control datepicker" id="dtpFrom_Date" name="Filter.From_Date" value="@((Model.Filter.From_Date == DateTime.MinValue ? "" : Model.Filter.From_Date.ToString("yyyy-MM-dd")))" readonly />
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                    </div>
-
+                                <div class="input-group date" id="dp-2" data-date="" data-date-format="yyyy-mm-dd">
+                                    <input type="text" class="form-control datepicker" id="dtpFrom_Date" name="Filter.From_Date" value="@((Model.Filter.From_Date == DateTime.MinValue ? "" : Model.Filter.From_Date.ToString("yyyy-MM-dd")))" readonly />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                 </div>
+
                             </div>
+                        </div>
 
-                            <div class="col-md-3">
-                                <div class="form-group">
+                        <div class="col-md-3">
+                            <div class="form-group">
 
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
 
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="yyyy-mm-dd">
-                                        <input type="text" class="form-control datepicker" id="dtpTo_Date" name="Filter.To_Date" value="@((Model.Filter.To_Date == DateTime.MinValue ? "" : Model.Filter.To_Date.ToString("yyyy-MM-dd")))" readonly />
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                    </div>
-
+                                <div class="input-group date" id="dp-2" data-date="" data-date-format="yyyy-mm-dd">
+                                    <input type="text" class="form-control datepicker" id="dtpTo_Date" name="Filter.To_Date" value="@((Model.Filter.To_Date == DateTime.MinValue ? "" : Model.Filter.To_Date.ToString("yyyy-MM-dd")))" readonly />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                 </div>
+
                             </div>
+                        </div>
 
-                            <div class="col-md-2" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-3" style="text-align: right; padding-top: 20px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-success active" value="Search" id="btnSearchSales">Search</button>                                   
-                               
-                                    <button type="button" id="btnDetails" class="btn btn-info blue" data-toggle="modal" data-target="#myModal">Details</button>
-                                 </div>
-                                </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success active" value="Search" id="btnSearchSales">Search</button>
+
+                                <button type="button" id="btnDetails" class="btn btn-danger active" data-toggle="modal" data-target="#myModal">Details</button>
+                            </div>
                         </div>
                     </div>
 
@@ -103,11 +100,8 @@
 
         </div>
 
-        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
 
-        </div>
-
-        <div class="col-md-12" style="padding: 0px; overflow-y: scroll;height:500px;" id="divDynamicTable">
+        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0; overflow-y: scroll;height:500px;">
 
         </div>
 
