--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -41,13 +41,13 @@
 
                         @*<div class="col-md-3">
 
-                            <div class="form-group">
-                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order No.</span>
-                                <input type="text" class="form-control" name="Filter.Purchase_Order_No" placeholder="Enter Purchase Order No to search." />
-                                <input type="hidden" id="hdnPurchaseOrderId" name="PurchaseOrder.Purchase_Order_Id" value="@Model.PurchaseOrder.Purchase_Order_Id" />
-                            </div>
+                                <div class="form-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order No.</span>
+                                    <input type="text" class="form-control" name="Filter.Purchase_Order_No" placeholder="Enter Purchase Order No to search." />
+                                    <input type="hidden" id="hdnPurchaseOrderId" name="PurchaseOrder.Purchase_Order_Id" value="@Model.PurchaseOrder.Purchase_Order_Id" />
+                                </div>
 
-                        </div>*@
+                            </div>*@
 
                         <div class="col-md-4">
                             <div class="form-group auto-complete">
@@ -70,7 +70,7 @@
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
                                 @*<button type="button" class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseOrder">View</button>
-                                <button type="button" class="btn btn-info active" disabled value="View" id="btnViewPurchaseOrder">Print</button>*@
+                                    <button type="button" class="btn btn-info active" disabled value="View" id="btnViewPurchaseOrder">Print</button>*@
 
                                 <button type="button" class="btn btn-danger active edit" disabled value="Edit" id="btnEditPurchaseOrder">View</button>
                                 <button type="button" class="btn btn-info active edit" disabled value="View" id="btnViewPurchaseOrder">Print</button>
@@ -87,10 +87,11 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+
+        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
 
         </div>
-
+        
         <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseOrderPager">
 
 
