--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -252,7 +252,7 @@
         <div class="row PurchaseOrderRequest scroll-bar" style="height:300px">
             <div class="col-md-12 table-responsive">
 
-                <table class="table table-bordered table-hover" style="width:3000px; max-width:none;" id="tblPurchaseOrderRequestItems">
+                <table class="table table-hover" style="width:3000px; max-width:none;background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;" id="tblPurchaseOrderRequestItems">
                     <thead>
                         <tr>
                             <th style="width:100px;">Article No.</th>
@@ -284,14 +284,14 @@
                             <th style="width:100px;">Size diff.</th>
                             <th style="width:100px;">Total amt.</th>
                             <th style="width:auto;">Comment</th>
-                            <th style="width:180px;">Actions</th>
+                            <th style="width:100px;">Actions</th>
                         </tr>
                     </thead>
 
                     <tbody></tbody>
                 </table>
 
-                <table class="table table-bordered table-hover" style="width:3000px; max-width:none;" id="tblPurchaseOrderRequestCalculation">
+                <table class="table table-hover" style="width:3000px; max-width:none; background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;" id="tblPurchaseOrderRequestCalculation">
                     <tbody>
                         <tr style="background: rgba(0, 0, 0, 0.02);">
                             <td style="width:100px;"></td>
@@ -329,7 +329,7 @@
                                 <input type="hidden" id="hdnNetAmount" name="PurchaseOrderRequest.Net_Amount" />
                             </td>
                             <td style="width:auto;"></td>
-                            <td style="width:180px;"></td>
+                            <td style="width:100px;"></td>
                         </tr>
 
 
