--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -82,7 +82,7 @@
                     <h3 class="panel-title"><span class="fa fa-tasks"></span></h3>
                 </div>
 
-                <div class="panel-body list-group scroll" style="width: 220px; height: 135px; overflow: auto;">
+                <div class="panel-body list-group scroll" style="width: 220px; height: 150px; overflow: auto;">
                     <div class="page-content-wrap">
 
                     </div>
@@ -121,12 +121,13 @@
                 <img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../Images/notification.gif">*@
             @if (Cookies.Warehouse_Notification_Count > 0)
             {
-                <a href="#"><img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../../Images/notification.gif"></a>
+                
+                <a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>
                 @*<img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../../Images/notification.gif">*@
             }
             else
             {
-                 <a href="#"><img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../../Images/notification.gif"></a>
+                 <a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>
                 @*<img alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../../Images/notification.gif">*@
             }
             @if (Cookies.Warehouse_Notification_Count > 0)
@@ -135,15 +136,19 @@
             }
             <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging" id="div_Warehouse_Notification" style="width: 220px;">
 
-                <div class="panel-body list-group scroll" style="width: 220px; height: 235px; overflow: auto;">
+                <div class="panel-body list-group scroll" style="width: 220px; height: 200px; overflow: auto;">
                     <div class="page-content-wrap">
 
                     </div>
                 </div>
-
+                @*Added by vinod mane on 27/10/2016*@
+                <div class="panel-footer text-center">
+                    <a href="/PurchaseOrderRequest/Search">Create Purchase Order Request</a>
+                </div>
+                @*End*@
             </div>
 
-
+            
         </li>
        <!--Added by aditya[07102016] End-->
 
